style.css
:root {
    --bg-color: rgba(0, 0, 0, 0.851);
    --tx-color: rgba(255, 255, 255, 0.702);
    --span-color: rgba(241, 231, 136, 0.902);
    
  }

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
    scroll-behavior: smooth;
    color: var(--tx-color);
}
@media only screen and (min-width: 350px){
    /*general styling*/
    body{
        background-color: var(--bg-color)
    }
    p{
        font-size: 18px;
    }
    h1{
        font-size: 3.1rem;
    }
    h2{
        font-size: 2.4rem;
        display: inline;
    }
    h3{
        font-size: 1.7rem;
        display: inline;
    }
    h4{
        font-size: 1.3rem;
        display: inline;
    }
    .darkMode{
        position: relative;
        font-size: 36px;
    }
    .darkMode i{
        position: absolute;
        top: 20px;
        right: 20px
    }

    .nav-bar{
        position: fixed;
        bottom: 0;
        width: 100vw;
        height: 55px;
        display: flex;
        justify-content: space-around;
        background-color: var(--bg-color);
        z-index: 5;
        
    };
    .nav-bar div{
        display: inline;
        text-align: center;
        
    }
    .nav-bar div a{
        display: flex;
        flex-direction: column;
        text-align: center;
        text-decoration: none;
        font-size: 12px;
        line-height: 0;
    }
    .nav-bar div a i {
        font-size: 20px;
        line-height: 2;
        height: auto;
    }

    /*home section styling*/
    #home{
        height: 100vh;
        background: url(./media/ferenc-almasi-L8KQIPCODV8-unsplash.jpg), var(--bg-color);
        background-position: center;
        background-blend-mode: overlay;
        background-size: cover;
        width: 100%;
        overflow: hidden;
    }
    .header{
        width: 90%;
        margin: auto;
        transform: translateY(20vh);
    }
    .header h3 {
        
        font-weight: normal;
    }
    .contact{
        font-size: 48px;
        width: 80%;
        display: flex;
        justify-content: space-between;
        margin: 1em auto;
        text-align: center;
    }

    /*about page styling*/
    #about div, #skills div, #projects > div{
        width: 90%;
        margin: auto;
        padding: 1em 0;
    }

    #about div p, #skills div p{
        margin: 1em 0;
    }

    .img-div, .codecademy, .lewagon{
        width: 100%;
        text-align: center;
    }

    .img-div img{
        width: 10em;
        height: 10em;
        margin: 0 auto;
        border-radius: 50%;
        border: 3px solid var(--tx-color);
    }
    .codecademy img{
        width: 100%;
        margin: auto;
        height: 4em;
    }
    .lewagon img{
        width: 7em;
        height: 7em;
        margin: auto;
    }
    #skills div p span{
        font-size: 1.3rem;
        font-weight: bold;
        font-style: italic;
        color: var(--span-color)
    }
    /*projects section*/
    .card{
        margin: 1em 0;
        padding: 0;
        border: 1px solid var(--tx-color);
        border-radius: 10px;
    }
    
    .card img{
        width: 100%;
        height: 70%;
        border-radius: 10px 10px 0 0;
    }

    .card-content{
        padding: .5em 1em;

    }
    .card-links{
        padding: .5em 0;
        border-top: 1px solid var(--tx-color);
        padding: .5em 1em;      
    }

    .card-links a{
        margin-right: .5em;
        text-decoration: none;  
    }

    #projects{
        margin-bottom: 3em;
    }
    .hide-form {
        opacity: 0;
        width: 0vw;
        height: 0vh;
        display: none;
    }
    .display-form{
        display: flex;
        opacity: 1;
        transition: all 1s linear;
        align-items: center;
        width: 100vw;
        height: 100vh;
        background-color: rgba(0, 0, 0, 0.4);
    }
    .overflow-hidden{
        overflow: hidden;
    }
    #contact > div{
        width: 90%;
        margin: 0 auto;
        height: auto;
    }
    #contact input, #contact textarea{
        display: block;
        width: 100%;
        margin: 1em 0;
        border-radius: 10px;
        padding: 1em;
        height: 3em;
    }
    #contact textarea{
        height: 12em;
    }
    #contact form button{
        border: none;
        width: 60%;
        margin: 1em auto;
        display: block;
        outline: none;
        background-color: transparent;
    }
    #closeButton{
        background-color: transparent;
        outline: none;
        border: none;
        margin-top: 5em;
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }
    #closeButton i {
        font-size: 20px;
        line-height: 2;
    }
}   

@media only screen and (min-width: 600px){
    #home > div{
        width: 70%;
        transform: translateY(30vh);
    }

    #about div, #skills div, #projects > div, #contact > div{
        width: 70%;
    }
}

@media only screen and (min-width: 768px){
    #home > div{
        width: 70%;
        transform: translateY(30vh);
    }

    #about div, #skills div, #projects > div{
        width: 70%;
    }
    .codecademy img{
        height: 7em;
    }

    .card-container{
        width: 90%;
        display: flex;
        justify-content: space-between;
        flex-wrap: wrap;
    }
    .card{
        width: 49%;
    }
   .card img {
       height: 60%;
   }
   .card-links {
       align-items: baseline;
   }
}   
@media only screen and (min-width: 992px){
    .nav-bar{
        top: 0;
        left: 0;
        width: 100%;
        display: flex;
        justify-content: flex-end;
        padding-right: 2em;
    }
    .nav-bar div{
        margin-left: 2em;
    }
    .nav-bar div a{
        flex-direction: row;
        align-items: baseline;
        font-size: 16px;
        
    }
    .nav-bar div a i {
        margin-right: .5em;
    }
    #home > div{
        width: 50%;
        transform: translateY(30vh);
    }
    .img-div img, .lewagon img{
        width: 15em;
        height: 15em;
    }
    .codecademy img{
        width: 50%;
        margin: auto;
    }
    .card-container{
        justify-content: space-around;
    }
    .card{
        width: 40%;
    }
   .card img {
       height: 70%;
   }
   #contact > div{
       width: 50%;
   }
}

